# gedit

./: .gitlab-ci.yml  CONTRIBUTING.md  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gedit.doap  meson.build  meson_options.txt
build-aux/buildstream/: gedit.bst
build-aux/flatpak/: generate-json-manifest.sh  generate-manifest.sh  org.gnome.gedit.json  org.gnome.gedit.yml
build-aux/meson/: post_install.py
build-aux/snap/: snapcraft.yaml
data/: gedit.1  gedit.pc.in  meson.build  org.gnome.gedit.appdata.xml.in  org.gnome.gedit.desktop.in  org.gnome.gedit.desktop.in.in  org.gnome.gedit.gschema.xml.in  org.gnome.gedit.metainfo.xml.in
data/icons/: Makefile.am  meson.build
docs/: build.md  common-bugs.md  gedit-development-getting-started  gedit-development-getting-started.md  roadmap-done.md  roadmap.md
docs/reference/: api-breaks.xml  gedit-docs.xml  gedit-sections.txt  meson.build
gedit/: gedit-app-activatable.h  gedit-app-osx.m  gedit-app-private.h  gedit-app-win32.c  gedit-app-win32.h  gedit-app.c  gedit-app.h  gedit-bottom-panel.c  gedit-bottom-panel.h  gedit-close-confirmation-dialog.c  gedit-commands-documents.c  gedit-commands-edit.c  gedit-commands-file.c  gedit-commands-help.c  gedit-commands-private.h  gedit-commands-search.c  gedit-commands-view.c  gedit-commands.h  gedit-debug.h  gedit-dirs.c  gedit-dirs.h  gedit-document-private.h  gedit-document.c  gedit-document.h  gedit-documents-panel.c  gedit-encodings-combo-box.h  gedit-factory.c  gedit-file-chooser-dialog-gtk.c  gedit-file-chooser-dialog-osx.m  gedit-file-chooser-dialog.c  gedit-file-chooser-dialog.h  gedit-file-chooser.c  gedit-header-bar.c  gedit-header-bar.h  gedit-io-error-info-bar.c  gedit-io-error-info-bar.h  gedit-macros.h  gedit-menu-extension.h  gedit-menu-stack-switcher.c  gedit-menu-stack-switcher.h  (+45 more)
gedit/resources/: gedit.gresource.xml.in  meson.build
gedit/resources/css/: gedit-style.css
gedit/resources/gtk/: menus-common.ui  menus-traditional.ui  menus.ui
gedit/resources/ui/: gedit-highlight-mode-dialog.ui  gedit-open-document-selector.ui  gedit-preferences-dialog.ui  gedit-shortcuts.ui  gedit-statusbar.ui  gedit-view-frame.ui  gedit-window.ui
help/: meson.build
help/C/: gedit-brief-intro.page  gedit-change-color-scheme.page  gedit-change-default-font.page  gedit-close-file.page  gedit-create-new-file.page  gedit-edit-as-root.page  gedit-general-intro.page  gedit-open-files.page  gedit-open-on-server.page  gedit-open-several-files-at-once.page  gedit-plugins-insert-date-time.page  gedit-plugins-install.page  gedit-plugins-quick-open.page  gedit-printing-order.page  gedit-printing-select.page  gedit-printing.page  gedit-quickstart.page  gedit-replace.page  gedit-save-file.page  gedit-search-and-replace.page  gedit-search.page  gedit-shortcut-keys.page  gedit-tab-groups.page  gedit-tabs-moving.page  gedit-tabs.page  gedit-undo-redo.page  index.page
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/hu/: hu.po
help/id/: id.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
plugins/: Makefile.am  list-of-gedit-plugins.md  meson.build  third-party-plugins.md
plugins/checkupdate/: meson.build
plugins/docinfo/: docinfo.plugin.desktop.in  gedit-docinfo-plugin.c  meson.build
plugins/docinfo/resources/: meson.build
plugins/externaltools/: externaltools.plugin.desktop.in  meson.build
plugins/externaltools/data/: Makefile.am  meson.build  open-terminal-here-osx.desktop.in  remove-trailing-spaces.desktop.in  send-to-fpaste.tool.in
plugins/externaltools/scripts/: meson.build
plugins/externaltools/tools/: functions.py  meson.build
plugins/filebrowser/: filebrowser.plugin.desktop.in  gedit-file-browser-plugin.c  gedit-file-browser-store.c  gedit-file-browser-view.c  gedit-file-browser-widget.c  meson.build
plugins/filebrowser/messages/: meson.build
plugins/filebrowser/resources/: meson.build
plugins/modelines/: meson.build  modeline-parser.c
plugins/openlinks/: gedit-open-links-plugin.c  gedit-uri-context-menu-plugin.c  meson.build  uricontextmenu.plugin.desktop.in
plugins/openlinks/unit-tests/: test-open-links.c
plugins/pythonconsole/: meson.build  pythonconsole.plugin.desktop.in
plugins/pythonconsole/pythonconsole/: meson.build
plugins/quickhighlight/: gedit-quick-highlight-plugin.c  meson.build
plugins/quickopen/: meson.build  quickopen.plugin.desktop.in
plugins/quickopen/quickopen/: popup.py  virtualdirs.py
plugins/snippets/: meson.build  snippets.plugin.desktop.in
plugins/snippets/snippets/: meson.build  windowactivatable.py
plugins/sort/: meson.build
plugins/sort/resources/: meson.build
plugins/spell/: gedit-spell-plugin.c  meson.build  spell.plugin.desktop.in
plugins/spell/resources/ui/: gedit-spell-setup-dialog.ui
plugins/time/: gedit-time-plugin.c  meson.build
plugins/time/resources/: meson.build
plugins/uricontextmenu/: gedit-uri-context-menu-plugin.c  gedit-uri-context-menu-plugin.h
po/: LINGUAS  Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  (+66 more)
subprojects/: gtksourceview.wrap  libgd.wrap
